@@ -3,6 +3,7 @@ Version 0.4.4
 + Added watercan use limit
 + Added watercan refill button to the market
 + Added multiharvest option for now (beans, tomatos and strawberries)
++ Added selection of count in market (to fast buy and sell)
 
 Version 0.4.2
 + Added item info in market
